Fix alignment issues for nav.

--- a/src/css/imports/components/_menu.scss
+++ b/src/css/imports/components/_menu.scss
@@ -95,6 +95,7 @@
   @include media('>=desktop') {
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 0.6rem;
   }
   @include media('>=desktop') {
@@ -124,7 +125,7 @@
 .menu__item a {
   font-weight: bold;
   font-size: 0.9rem;
-  letter-spacing: -1px;
+  letter-spacing: -0.5px;
   text-decoration: none;
   white-space: nowrap;
 }
@@ -155,6 +156,7 @@
     top: 100%;
     display: flex;
     flex-flow: column;
+    align-items: self-start;
     padding: 1em;
     gap: 0.5em;
     background-color: var(--nav-submenu-background);
